// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMatchers blockBodyLineRegex 1`] = `
Array [
  Array [
    "0",
    "*",
  ],
  Array [
    "1",
    "*",
  ],
  Array [
    "3",
    "*",
  ],
  Array [
    "4",
    "",
  ],
  Array [
    "5",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "*",
  ],
  Array [
    "lineBody",
    "",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 2`] = `
Array [
  Array [
    "0",
    "* ",
  ],
  Array [
    "1",
    "*",
  ],
  Array [
    "3",
    "*",
  ],
  Array [
    "4",
    "",
  ],
  Array [
    "5",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* ",
  ],
  Array [
    "lineBody",
    "",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 3`] = `
Array [
  Array [
    "0",
    "* foo *",
  ],
  Array [
    "1",
    "* foo *",
  ],
  Array [
    "3",
    "* foo *",
  ],
  Array [
    "4",
    " foo ",
  ],
  Array [
    "5",
    "*",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* foo *",
  ],
  Array [
    "lineBody",
    " foo ",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 4`] = `
Array [
  Array [
    "0",
    "* key: value1, value2 *",
  ],
  Array [
    "1",
    "* key: value1, value2 *",
  ],
  Array [
    "3",
    "* key: value1, value2 *",
  ],
  Array [
    "4",
    " key: value1, value2 ",
  ],
  Array [
    "5",
    "*",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* key: value1, value2 *",
  ],
  Array [
    "lineBody",
    " key: value1, value2 ",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 5`] = `
Array [
  Array [
    "0",
    "* key: {a: value1, b: value2} *",
  ],
  Array [
    "1",
    "* key: {a: value1, b: value2} *",
  ],
  Array [
    "3",
    "* key: {a: value1, b: value2} *",
  ],
  Array [
    "4",
    " key: {a: value1, b: value2} ",
  ],
  Array [
    "5",
    "*",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* key: {a: value1, b: value2} *",
  ],
  Array [
    "lineBody",
    " key: {a: value1, b: value2} ",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 6`] = `
Array [
  Array [
    "0",
    "* key: {a: value1, b: value2}",
  ],
  Array [
    "1",
    "* key: {a: value1, b: value2}",
  ],
  Array [
    "3",
    "* key: {a: value1, b: value2}",
  ],
  Array [
    "4",
    " key: {a: value1, b: value2}",
  ],
  Array [
    "5",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* key: {a: value1, b: value2}",
  ],
  Array [
    "lineBody",
    " key: {a: value1, b: value2}",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 7`] = `
Array [
  Array [
    "0",
    "**/",
  ],
  Array [
    "1",
    "**/",
  ],
  Array [
    "3",
    "**/",
  ],
  Array [
    "4",
    "",
  ],
  Array [
    "5",
    "*/",
  ],
  Array [
    "6",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "**/",
  ],
  Array [
    "lineBody",
    "",
  ],
  Array [
    "postCommentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 8`] = `
Array [
  Array [
    "0",
    "* */",
  ],
  Array [
    "1",
    "* */",
  ],
  Array [
    "3",
    "* */",
  ],
  Array [
    "4",
    " ",
  ],
  Array [
    "5",
    "*/",
  ],
  Array [
    "6",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* */",
  ],
  Array [
    "lineBody",
    " ",
  ],
  Array [
    "postCommentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 9`] = `
Array [
  Array [
    "0",
    "* foo */",
  ],
  Array [
    "1",
    "* foo */",
  ],
  Array [
    "3",
    "* foo */",
  ],
  Array [
    "4",
    " foo ",
  ],
  Array [
    "5",
    "*/",
  ],
  Array [
    "6",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* foo */",
  ],
  Array [
    "lineBody",
    " foo ",
  ],
  Array [
    "postCommentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 10`] = `
Array [
  Array [
    "0",
    "* key: value1, value2 */",
  ],
  Array [
    "1",
    "* key: value1, value2 */",
  ],
  Array [
    "3",
    "* key: value1, value2 */",
  ],
  Array [
    "4",
    " key: value1, value2 ",
  ],
  Array [
    "5",
    "*/",
  ],
  Array [
    "6",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "* key: value1, value2 */",
  ],
  Array [
    "lineBody",
    " key: value1, value2 ",
  ],
  Array [
    "postCommentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 11`] = `
Array [
  Array [
    "0",
    "*/",
  ],
  Array [
    "1",
    "*/",
  ],
  Array [
    "2",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "*/",
  ],
  Array [
    "preCommentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers blockBodyLineRegex 12`] = `
Array [
  Array [
    "0",
    "",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "3",
    "",
  ],
  Array [
    "4",
    "",
  ],
  Array [
    "5",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "",
  ],
  Array [
    "lineBody",
    "",
  ],
]
`;

exports[`getMatchers commentStartRegex 1`] = `
Array [
  Array [
    "0",
    "/*!*/",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "2",
    "",
  ],
  Array [
    "3",
    "*/",
  ],
  Array [
    "4",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "/*!*/",
  ],
  Array [
    "leadingSpace",
    "",
  ],
  Array [
    "lineBody",
    "",
  ],
  Array [
    "commentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers commentStartRegex 2`] = `
Array [
  Array [
    "0",
    "/*! foo */",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "2",
    " foo ",
  ],
  Array [
    "3",
    "*/",
  ],
  Array [
    "4",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "/*! foo */",
  ],
  Array [
    "leadingSpace",
    "",
  ],
  Array [
    "lineBody",
    " foo ",
  ],
  Array [
    "commentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers commentStartRegex 3`] = `
Array [
  Array [
    "0",
    "/*! foo bar baz */",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "2",
    " foo bar baz ",
  ],
  Array [
    "3",
    "*/",
  ],
  Array [
    "4",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "/*! foo bar baz */",
  ],
  Array [
    "leadingSpace",
    "",
  ],
  Array [
    "lineBody",
    " foo bar baz ",
  ],
  Array [
    "commentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers commentStartRegex 4`] = `
Array [
  Array [
    "0",
    "/*! foo",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "2",
    " foo",
  ],
  Array [
    "3",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "/*! foo",
  ],
  Array [
    "leadingSpace",
    "",
  ],
  Array [
    "lineBody",
    " foo",
  ],
]
`;

exports[`getMatchers commentStartRegex 5`] = `
Array [
  Array [
    "0",
    "/*! foo bar *",
  ],
  Array [
    "1",
    "",
  ],
  Array [
    "2",
    " foo bar ",
  ],
  Array [
    "3",
    "*",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "/*! foo bar *",
  ],
  Array [
    "leadingSpace",
    "",
  ],
  Array [
    "lineBody",
    " foo bar ",
  ],
]
`;

exports[`getMatchers commentStartRegex 6`] = `
Array [
  Array [
    "0",
    "   /*! foo bar * ",
  ],
  Array [
    "1",
    "   ",
  ],
  Array [
    "2",
    " foo bar ",
  ],
  Array [
    "3",
    "*",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "   /*! foo bar * ",
  ],
  Array [
    "leadingSpace",
    "   ",
  ],
  Array [
    "lineBody",
    " foo bar ",
  ],
]
`;

exports[`getMatchers commentStartRegex 7`] = `
Array [
  Array [
    "0",
    "   /*! foo bar */ ",
  ],
  Array [
    "1",
    "   ",
  ],
  Array [
    "2",
    " foo bar ",
  ],
  Array [
    "3",
    "*/",
  ],
  Array [
    "4",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "   /*! foo bar */ ",
  ],
  Array [
    "leadingSpace",
    "   ",
  ],
  Array [
    "lineBody",
    " foo bar ",
  ],
  Array [
    "commentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers commentStartRegex 8`] = `
Array [
  Array [
    "0",
    "   /*! foo bar    */ ",
  ],
  Array [
    "1",
    "   ",
  ],
  Array [
    "2",
    " foo bar    ",
  ],
  Array [
    "3",
    "*/",
  ],
  Array [
    "4",
    "*/",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "   /*! foo bar    */ ",
  ],
  Array [
    "leadingSpace",
    "   ",
  ],
  Array [
    "lineBody",
    " foo bar    ",
  ],
  Array [
    "commentEnd",
    "*/",
  ],
]
`;

exports[`getMatchers directiveEndRegex 1`] = `
Array [
  Array [
    "0",
    "InGenR:end",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:end",
  ],
]
`;

exports[`getMatchers directiveEndRegex 2`] = `
Array [
  Array [
    "0",
    " InGenR:end ",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    " InGenR:end ",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 1`] = `
Array [
  Array [
    "0",
    "InGenR:expand",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 2`] = `
Array [
  Array [
    "0",
    "   InGenR:expand  ",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "   InGenR:expand  ",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 3`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmplName",
  ],
  Array [
    "1",
    " tmplName",
  ],
  Array [
    "2",
    "tmplName",
  ],
  Array [
    "3",
    "",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmplName",
  ],
  Array [
    "templateName",
    "tmplName",
  ],
  Array [
    "additionalTemplateNames",
    "",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 4`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmpl1,templ2",
  ],
  Array [
    "1",
    " tmpl1,templ2",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ",templ2",
  ],
  Array [
    "4",
    ",templ2",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmpl1,templ2",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ",templ2",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 5`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmpl1, tmpl2",
  ],
  Array [
    "1",
    " tmpl1, tmpl2",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ", tmpl2",
  ],
  Array [
    "4",
    ", tmpl2",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmpl1, tmpl2",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ", tmpl2",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 6`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmpl1, tmpl2, tmpl3,   tmpl4,tmpl5,foo/tmpl6,bar/tmpl-7, baz/Tmpl_9",
  ],
  Array [
    "1",
    " tmpl1, tmpl2, tmpl3,   tmpl4,tmpl5,foo/tmpl6,bar/tmpl-7, baz/Tmpl_9",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ", tmpl2, tmpl3,   tmpl4,tmpl5,foo/tmpl6,bar/tmpl-7, baz/Tmpl_9",
  ],
  Array [
    "4",
    ", baz/Tmpl_9",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmpl1, tmpl2, tmpl3,   tmpl4,tmpl5,foo/tmpl6,bar/tmpl-7, baz/Tmpl_9",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ", tmpl2, tmpl3,   tmpl4,tmpl5,foo/tmpl6,bar/tmpl-7, baz/Tmpl_9",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 7`] = `
Array [
  Array [
    "0",
    " InGenR:expand tmpl-1 some-config.yml ",
  ],
  Array [
    "1",
    " tmpl-1 some-config.yml",
  ],
  Array [
    "2",
    "tmpl-1",
  ],
  Array [
    "3",
    "",
  ],
  Array [
    "5",
    " some-config.yml",
  ],
  Array [
    "6",
    "some-config.yml",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    " InGenR:expand tmpl-1 some-config.yml ",
  ],
  Array [
    "templateName",
    "tmpl-1",
  ],
  Array [
    "additionalTemplateNames",
    "",
  ],
  Array [
    "configFilePath",
    "some-config.yml",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 8`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmpl1, tmpl2 some-config.yml",
  ],
  Array [
    "1",
    " tmpl1, tmpl2 some-config.yml",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ", tmpl2",
  ],
  Array [
    "4",
    ", tmpl2",
  ],
  Array [
    "5",
    " some-config.yml",
  ],
  Array [
    "6",
    "some-config.yml",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmpl1, tmpl2 some-config.yml",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ", tmpl2",
  ],
  Array [
    "configFilePath",
    "some-config.yml",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 9`] = `
Array [
  Array [
    "0",
    "InGenR:expand tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "1",
    " tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ", tmpl2",
  ],
  Array [
    "4",
    ", tmpl2",
  ],
  Array [
    "5",
    " someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "6",
    "someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "InGenR:expand tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ", tmpl2",
  ],
  Array [
    "configFilePath",
    "someDir/some_sub_dir/some-config.yml",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 10`] = `
Array [
  Array [
    "0",
    "  InGenR:expand tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml  ",
  ],
  Array [
    "1",
    " tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "2",
    "tmpl1",
  ],
  Array [
    "3",
    ", tmpl2",
  ],
  Array [
    "4",
    ", tmpl2",
  ],
  Array [
    "5",
    " someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "6",
    "someDir/some_sub_dir/some-config.yml",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    "  InGenR:expand tmpl1, tmpl2 someDir/some_sub_dir/some-config.yml  ",
  ],
  Array [
    "templateName",
    "tmpl1",
  ],
  Array [
    "additionalTemplateNames",
    ", tmpl2",
  ],
  Array [
    "configFilePath",
    "someDir/some_sub_dir/some-config.yml",
  ],
]
`;

exports[`getMatchers expandDirectiveRegex 11`] = `
Array [
  Array [
    "0",
    " InGenR:expand knex-table-interface config.yml ",
  ],
  Array [
    "1",
    " knex-table-interface config.yml",
  ],
  Array [
    "2",
    "knex-table-interface",
  ],
  Array [
    "3",
    "",
  ],
  Array [
    "5",
    " config.yml",
  ],
  Array [
    "6",
    "config.yml",
  ],
  Array [
    "index",
    0,
  ],
  Array [
    "input",
    " InGenR:expand knex-table-interface config.yml ",
  ],
  Array [
    "templateName",
    "knex-table-interface",
  ],
  Array [
    "additionalTemplateNames",
    "",
  ],
  Array [
    "configFilePath",
    "config.yml",
  ],
]
`;
